[package]
name = "s5_store_local"
version.workspace = true
edition.workspace = true
description = "Local filesystem blob storage backend for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
libc.workspace = true
s5_core.workspace = true
serde.workspace = true
# Local store needs tokio fs (native-only crate); `time` for the prune
# task's periodic interval.
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "fs", "time"] }
tokio-util.workspace = true
tracing.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
filetime = "0.2"
tempfile.workspace = true
