[package]
name = "s5_store_local_links"
version.workspace = true
edition.workspace = true
description = "Reference local files by hash without copying to blob store"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
redb = { workspace = true }
s5_core = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
