[package]
name = "s5_store_memory"
version = "1.0.0-beta.1"
edition = "2024"
description = "In-memory blob storage backend for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
# Byte-weighted W-TinyLFU backend for the budgeted store variant.
moka = { version = "0.12", features = ["sync"] }
s5_core.workspace = true

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
