[package]
name = "s5_store_memory"
version.workspace = true
edition.workspace = true
description = "In-memory blob storage backend for S5"
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
# Byte-weighted W-TinyLFU backend for the budgeted store variant.
moka = { version = "0.12", features = ["sync"] }
s5_core.workspace = true

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
