[package]
name = "s5_store_s3"
version = "1.0.0-beta.1"
edition = "2024"
description = "S3-compatible blob storage backend for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
rust-s3 = { version = "0.37.0" }
s5_core.workspace = true
serde.workspace = true
# S3 store uses async io
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "rt"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
