[package]
name = "s5_store_s3"
version.workspace = true
edition.workspace = true
description = "S3-compatible blob storage backend for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
rust-s3 = { version = "0.37.0", default-features = false, features = ["tokio-rustls-tls", "tags", "fail-on-err"] }
s5_core.workspace = true
serde.workspace = true
# S3 store uses async io
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "rt"] }
tokio-util = { workspace = true, features = ["io"] }

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
