[package]
name = "s5_store_sia"
version.workspace = true
edition.workspace = true
description = "Sia-compatible blob storage backend for S5"
repository.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes.workspace = true
dashmap = "6.1.0"
ed25519-dalek = "2.2.0"
futures.workspace = true
futures-core = { version = "0.3.31", default-features = false }
getrandom = "0.3.3"
hex = "0.4.3"
http = "0.2.12"
log = "0.4.27"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
s5_core.workspace = true
serde.workspace = true
serde_json = "1.0.142"
thiserror = "2.0.12"
# Sia store uses async io
tokio = { version = "1.48.0", features = ["sync", "macros", "io-util", "rt"] }
tokio-util.workspace = true
anyhow.workspace = true

[dependencies.hyper]
version = "0.14"
default-features = false
features = ["client", "http1", "stream", "tcp"]
