[package]
name = "s5_importer_http"
version = "1.0.0-beta.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
futures.workspace = true
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["stream"] }
s5_core.workspace = true
s5_fs.workspace = true
scraper = "0.23.1"
tokio.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dev-dependencies]
s5_store_memory.workspace = true
tempfile = "3.17.1"
