[package]
name = "s5_importer_local"
version = "1.0.0-beta.1"
edition = "2024"
description = "Local filesystem importer for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
futures.workspace = true
log.workspace = true
s5_core.workspace = true
s5_fs.workspace = true
ignore = "0.4"

[dev-dependencies]
tempfile = "3.10.1"
s5_store_memory.workspace = true
tokio.workspace = true
