[package]
name = "s5_registry_redb"
version.workspace = true
edition.workspace = true
description = "Redb-backed registry implementation for S5"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
redb.workspace = true
s5_core.workspace = true
# Redb registry uses spawn_blocking (native-only crate)
tokio = { version = "1.48.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }
