[package]
name = "s5_registry_store"
version = "1.0.0-beta.1"
edition = "2024"
description = "Registry implementation backed by a BlobStore"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
hex = "0.4"
s5_core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
s5_store_memory = { workspace = true }
tokio = { workspace = true }
