[package]
name = "s5_registry_store"
version.workspace = true
edition.workspace = true
description = "Registry implementation backed by a BlobStore"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
hex = "0.4"
s5_core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
s5_store_memory = { workspace = true }
tokio = { workspace = true }
