[package]
name = "sia_rhp4_webtransport_streamer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
blake2 = "0.10.6"
bytes = "1.10.1"
chacha20 = "0.9.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dashmap = "6.1.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
fs5 = { features = [], path = "../../fs5" }
futures = "0.3.31"
hex = "0.4.3"
js-sys = "0.3.77"
log = "0.4.27"
s5_core = { path = "../../s5_core" }
serde = "1.0.219"
sia_sdk = { branch = "nate/rhp4", git = "https://github.com/SiaFoundation/sia-sdk-rs.git" }
thiserror = "2.0.12"
time = "0.3.41"
url = "2.5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50" }
web-transport = "0.9.3"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "TextDecoder",
  "TextEncoder",
  "WebTransport",
  "WebTransportBidirectionalStream",
  "WebTransportDatagramDuplexStream",
  "WebTransportReceiveStream",
  "WebTransportSendStream",
  "WritableStream",
  "WritableStreamDefaultWriter",
]
