[package]
name = "s5_store_indexd"
version = "1.0.0-beta.1"
edition = "2024"
description = "indexd-backed Store for S5: per-path uploads to Sia hosts via sia_storage::Sdk"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
age = { version = "0.11", default-features = false }
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono = "0.4"
futures.workspace = true
hex = "0.4"
s5_core.workspace = true
sia_core.workspace = true
sia_storage.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "io-util", "fs"] }
tokio-util.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
s5_store_local = { workspace = true }
s5_store_memory = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
