[package]
name = "s5_store_indexd"
version.workspace = true
edition.workspace = true
description = "indexd-backed Store for S5: per-path uploads to Sia hosts via sia_storage::Sdk"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono = "0.4"
futures.workspace = true
hex.workspace = true
s5_core.workspace = true
serde_json.workspace = true
sia_core.workspace = true
sia_storage.workspace = true
url = "2"
tokio = { workspace = true, features = ["sync", "rt", "time", "io-util"] }
tokio-util.workspace = true
tracing.workspace = true
zeroize.workspace = true

[dev-dependencies]
rand.workspace = true
s5_store_local = { workspace = true }
s5_store_memory = { workspace = true }
s5_store_packing = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "end_to_end"
path = "examples/end_to_end.rs"
