[package]
name = "s5_store_packing"
version = "1.0.0-beta.1"
edition = "2024"
description = "Pack-many-small-blobs-into-one decorator Store for S5"
repository = "https://github.com/s5-dev/s5-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
futures.workspace = true
minicbor.workspace = true
s5_core.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
s5_core = { workspace = true, features = ["testutil"] }
s5_store_memory = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
